flux/apps/search/searxng/app/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: searxng-lockdown
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway
            gateway.envoyproxy.io/owning-gateway-name: private-gateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
